<resources>
    <string name="app_name">Agenda</string>
    <string name="hint_nombre">Nombre:</string>
    <string name="hint_telefono">Telefono:</string>
    <string name="hint_direccion">Correo electrónico:</string>
    <string name="btn_guarda">Guardar registro</string>
    <string name="btnmdf">Modificar Registro</string>
    <string name="menu_nuevo">Nuevo</string>
    <string name="menu_acercade">Acerca de</string>
    <string name="menu_version">Version</string>
</resources>